feat(api): CRUD for models
